--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,9 +1,13 @@
-.footer {
+body{
+  position:relative;
+  min-height: 100vh;
+}
+
+
+footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
   background-color: #f5f5f5;
 }
 
